<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
       	android:id="@+id/infosaveview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:text="@string/infosaveview"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <CheckBox android:id="@+id/checkbox_sys"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/sys"/>
    <CheckBox android:id="@+id/checkbox_sensor"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor"/>
    <CheckBox android:id="@+id/checkbox_nfc"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nfc"/>
    <CheckBox android:id="@+id/checkbox_screen"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen"/>
    <CheckBox android:id="@+id/checkbox_network"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/network"/>
    <CheckBox android:id="@+id/checkbox_phone"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>
    <CheckBox android:id="@+id/checkbox_cpumem"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpumem"/>
    <CheckBox android:id="@+id/checkbox_environment"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/devellopement"/>
    </LinearLayout>


	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	    
	    <TextView
        		android:id="@+id/directoryview"
        		android:layout_width="match_parent"
        		android:layout_height="match_parent"
        		android:layout_marginTop="20dip"
        		android:contentDescription="@string/dir"
        		android:gravity="center"
        		android:text="@string/dir"/>
	    
	    <Button android:id="@+id/buttonSave"
				android:background="@drawable/button_border"
				android:foreground="?android:attr/selectableItemBackground"
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
				android:layout_margin="10dp"
	        	android:text="@string/sauvegarde"
	        	android:layout_alignParentBottom="true" />
	</RelativeLayout>
</LinearLayout>
