<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/infomailview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/infomailview"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email_dest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/email_dest"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:hint="@string/myaddress_domain_com"
                        android:inputType="textWebEmailAddress"
                        android:text="" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/email_objet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/email_objet"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_object"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_objet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:hint="@string/edit_objet"
                        android:inputType="textEmailSubject"
                        android:text="" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/dirfilemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/dirfilemail"
                android:gravity="center"
                android:text="@string/dirfilemail" />
            <Button
                android:id="@+id/button_emailGo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/button_emailGo"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

    </LinearLayout>